update find cell type count nb

--- a/find-cell-type-count/find-cell-type-count.ipynb
+++ b/find-cell-type-count/find-cell-type-count.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,22 +51,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The DSS indexes all content in the data store using ElasticSearch, so we should assemble an ElasticSearch query to search for cells matching our particular cell type. The problem is, we don't know the metadata structure ahead of time, so it would be useful to look at a few items in the data store to figure out where organ type would be stored.\n",
-    "\n",
-    "\n",
-    "\n",
-    "We run into a catch-22, since we need to search for items to see how the metadata is structured in order to know what "
+    "The DSS indexes all content in the data store using ElasticSearch, so we should assemble an ElasticSearch query to search for cells matching our particular cell type. The problem is, we don't know the metadata structure ahead of time, so it would be useful to look at a few items in the data store to figure out where organ type would be stored."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To find what cells appear in the database, we'll need to do some _searching_: specifically, using the __post_search()__ method. `post_search()` has four parameters: `es_query`, `output_format`, `replica`, and `per_page`, two of which are optional: `output_format` and `per_page`.\n",
+    "## Writing the ElasticSearch Query\n",
     "\n",
-    "Let's not worry about `per_page`; we won't be needing it for this. For `replica`, we'll be using AWS, and for `output_format`, we'll want to use the mode `raw`. Using `raw` will return get the verbatim JSON metadata for bundles that match our query, which we'll need in order to view details on the organ type.\n",
+    "We know from the [\"ElasticSearch Queries\"](../elasticsearch-queries/elasticsearch-queries.ipynb) that we can use a match search if we have only one condition to match, but we need a boolean conditional search if we have multiple. We need a boolean conditional search to match two criteria:\n",
     "\n",
-    "Assuming we don't know how to find the fields for our ElasticSearch query, we'll start by looking for them first. Our query should find all bundles that have both an _organ type_ of hematopoietic system and _at least one cell_ in the sample. In the end, it should look something like this:\n",
+    "* First condition is that the organ type matches our organ of interest\n",
+    "* Second conditition is that the bundle contains a gene expression matrix, from which we can extract a count of the total number of cells in the bundle\n",
+    "\n",
+    "The structure of the query will be as follows:\n",
     "\n",
     "```json\n",
     "query = {\n",
@@ -75,13 +74,11 @@
     "            \"must\" : [\n",
     "                {\n",
     "                    \"match\" : {\n",
-    "                        \"some.path.to.the.organ.type\" : organ_type\n",
+    "                        \"some.field\": \"value\"\n",
     "                    }\n",
     "                }, {\n",
-    "                    \"range\" : {\n",
-    "                        \"some.path.to.the.total.number.of.cells\" : {\n",
-    "                            \"gt\" : 0\n",
-    "                        }\n",
+    "                    \"match\" : {\n",
+    "                        \"some.field\": \"value\"\n",
     "                    }\n",
     "                }\n",
     "            ]\n",
@@ -90,12 +87,22 @@
     "}\n",
     "```\n",
     "\n",
-    "To find these fields, we can examine a bundle -- _any_ bundle containing what we need -- in its `raw` form. Let's do a search over everything to find one."
+    "We can start with an empty ElasticSearch query and examine the first item to inspect the metadata structure:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bundles = client.post_search(es_query={}, replica='aws', output_format='raw')\n",
+    "first_bundle = bundles['results'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +771,7 @@
    "source": [
     "import json\n",
     "print(json.dumps(\n",
-    "    client.post_search(es_query={}, replica='aws', output_format='raw')['results'][0],\n",
+    "    first_bundle,\n",
     "    indent=4))"
    ]
   },
@@ -772,26 +779,276 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's not very pretty, but now that we know where fields go, we can finish our ElasticSearch query."
+    "There is a lot of information here, but it is logically organized as follows: each bundle contains a number of JSON files that contain metadata related to the bundle, which ranges from technical information about the sequencing equipment used, to DOI numbers for related publications, to date and timestamps of when the data was last updated. This is all organized in the following JSON files:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metadata JSON Files:\n",
+      "--------------------\n",
+      "cell_suspension_json\n",
+      "dissociation_protocol_json\n",
+      "donor_organism_json\n",
+      "library_preparation_protocol_json\n",
+      "links_json\n",
+      "process_json\n",
+      "project_json\n",
+      "sequence_file_json\n",
+      "sequencing_protocol_json\n",
+      "specimen_from_organism_json\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Metadata JSON Files:\")\n",
+    "print(\"--------------------\")\n",
+    "print(\"\\n\".join(first_bundle['metadata']['files'].keys()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each JSON file contains different metadata information. In addition to metadata, we can also access the bundle manifest of files in each search result using the `metadata.manifest.files` key:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bundle Manifest:\n",
+      "----------------\n",
+      "cell_suspension_0.json\n",
+      "specimen_from_organism_0.json\n",
+      "donor_organism_0.json\n",
+      "sequence_file_0.json\n",
+      "project_0.json\n",
+      "library_preparation_protocol_0.json\n",
+      "sequencing_protocol_0.json\n",
+      "dissociation_protocol_0.json\n",
+      "process_0.json\n",
+      "process_1.json\n",
+      "process_2.json\n",
+      "links.json\n",
+      "HP1506401_H16.fastq.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Bundle Manifest:\")\n",
+    "print(\"----------------\")\n",
+    "for file_json in first_bundle['metadata']['manifest']['files']:\n",
+    "    print(file_json['name'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To assemble our query conditionals, we need to:\n",
+    "\n",
+    "* Find the metadata JSON file containing organ type\n",
+    "* Find bundles whose manifests list files of type `*.result` (a gene expression matrix file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query Condition: Cell Organ Type\n",
+    "\n",
+    "by searching through the list of JSON files above, we can find that `specimen_from_organism_json` contains information about the organs from which the cell data was taken."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "    {\n",
+      "        \"biomaterial_core\": {\n",
+      "            \"biomaterial_description\": \"Pancreas from normal donor H3\",\n",
+      "            \"biomaterial_id\": \"H3_pancreas\",\n",
+      "            \"biomaterial_name\": \"Pancreas from donor H3\",\n",
+      "            \"ncbi_taxon_id\": [\n",
+      "                9606\n",
+      "            ]\n",
+      "        },\n",
+      "        \"describedBy\": \"https://schema.humancellatlas.org/type/biomaterial/10.2.0/specimen_from_organism\",\n",
+      "        \"genus_species\": [\n",
+      "            {\n",
+      "                \"ontology\": \"NCBITaxon:9606\",\n",
+      "                \"ontology_label\": \"Homo sapiens\",\n",
+      "                \"text\": \"Homo sapiens\"\n",
+      "            }\n",
+      "        ],\n",
+      "        \"organ\": {\n",
+      "            \"ontology\": \"UBERON:0001264\",\n",
+      "            \"ontology_label\": \"pancreas\",\n",
+      "            \"text\": \"pancreas\"\n",
+      "        },\n",
+      "        \"organ_parts\": [\n",
+      "            {\n",
+      "                \"ontology\": \"UBERON:0000006\",\n",
+      "                \"ontology_label\": \"islet of Langerhans\",\n",
+      "                \"text\": \"islet of Langerhans\"\n",
+      "            }\n",
+      "        ],\n",
+      "        \"provenance\": {\n",
+      "            \"document_id\": \"1a2e8c90-0d8b-465c-a4a6-bed616dbfad2\",\n",
+      "            \"submission_date\": \"2019-05-14T09:16:14.546Z\",\n",
+      "            \"update_date\": \"2019-05-14T09:26:46.799Z\"\n",
+      "        },\n",
+      "        \"purchased_specimen\": {\n",
+      "            \"manufacturer\": \"Prodo Laboratories Inc (Irvine, CA, USA)\"\n",
+      "        },\n",
+      "        \"schema_type\": \"biomaterial\"\n",
+      "    }\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(json.dumps(\n",
+    "    first_bundle['metadata']['files']['specimen_from_organism_json'],\n",
+    "    indent = 4\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we know where to find the organ type: we search on the field\n",
+    "\n",
+    "```\n",
+    "files.specimen_from_organism_json.organ.text\n",
+    "```\n",
+    "\n",
+    "and it must match whatever organ we specified above. To execute a query matching this one condition:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "organ_query = {\n",
+    "    \"query\": {\n",
+    "        \"match\": {\n",
+    "            \"files.specimen_from_organism_json.organ.text\": organ_type\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "495\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(client.post_search(es_query=organ_query, replica='aws')['total_hits'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query Condition: Bundle Contains Gene Expression Matrix\n",
+    "\n",
+    "We search for expression matrices by searching for bundles containing `*.result` files, which can be found in the bundle manifest. Borrowing a query from the \"ElasticSearch Queries\" tutorial:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filetype_query = {\n",
+    "    \"query\" : {\n",
+    "        \"wildcard\": {\n",
+    "            \"manifest.files.name\": {\n",
+    "                \"value\": \"*.results\"\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "291\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(client.post_search(es_query=filetype_query, replica='aws')['total_hits'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combining the Queries\n",
+    "\n",
+    "To combine the queries, we use a boolean conditional query and specify our two conditions in the `must` key:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "query = {\n",
-    "    \"query\" : {\n",
-    "        \"bool\" : {\n",
-    "            \"must\" : [\n",
+    "    \"query\": {\n",
+    "        \"bool\": {\n",
+    "            \"must\": [\n",
     "                {\n",
-    "                    \"match\" : {\"files.specimen_from_organism_json.organ.text\" : organ_type}\n",
-    "                }, {\n",
-    "                    \"range\" : {\n",
-    "                        \"files.cell_suspension_json.estimated_cell_count\" : {\n",
-    "                            \"gt\" : 0\n",
+    "                    \"wildcard\": {\n",
+    "                        \"manifest.files.name\": {\n",
+    "                            \"value\": \"*.results\"\n",
     "                        }\n",
+    "                    }\n",
+    "                },\n",
+    "                {\n",
+    "                    \"match\": {\n",
+    "                        \"files.specimen_from_organism_json.organ.text\": organ_type\n",
     "                    }\n",
     "                }\n",
     "            ]\n",
@@ -804,51 +1061,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's see if this returns any results. Instead of using a `raw` `output_format` here, let's just use the default, `summary`, for simplicity (since all we need from our search is the total number of hits)."
+    "Now we run the query, and see how many results we have found:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "495\n"
+      "139\n"
      ]
     }
    ],
    "source": [
-    "print(client.post_search(es_query=query, replica='aws')['total_hits'])"
+    "bundles = client.post_search(es_query=query, replica='aws', output_format='raw')\n",
+    "print(bundles['total_hits'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_bundle = bundles['results'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pancreas\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(first_bundle['metadata']['files']['specimen_from_organism_json'][0]['organ']['text'])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can have all of the metadata included with the search results by including the keyword `output_format=\"raw\"` with our `post_search()` call:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"pancreas\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "item = client.post_search(es_query=query, replica='aws', output_format='raw')['results'][0]\n",
-    "print(json.dumps(\n",
-    "    item['metadata']['files']['specimen_from_organism_json'][0]['organ']['text'],\n",
-    "    indent=4))"
+    "## Counting Cells\n",
+    "\n",
+    "To count the number of cells, "
    ]
   },
   {
