update download smartseq2 matrix nb

--- a/download-smartseq2-matrix-scanpy/download-smartseq2-matrix-scanpy.ipynb
+++ b/download-smartseq2-matrix-scanpy/download-smartseq2-matrix-scanpy.ipynb
@@ -83,7 +83,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While this query is a bit hard to decipher, we can think about it this way: the **query** looks for bundles matching a **boolean** condition: that the two checks in the query **must** be true. The **wildcard** check looks for the `manifest.files.name` field, which contains the bundle manifest, and returns true if the name of a file listed in the bundle manifest ends with `.results`. The **range** cehck returns true if the bundle's `manifest.version` has a value greater than or equal to 7/12/2018. (It is important to note that the DSS uses timestamps for version numbers, which makes it possible to implement the date restriction.)\n",
+    "While this query is a bit hard to decipher, we can think about it this way:\n",
+    "\n",
+    "* the **query** looks for bundles matching a **boolean** condition: that the two checks in the query **must** be true. \n",
+    "\n",
+    "* The **wildcard** check looks for the `manifest.files.name` field, which contains the bundle manifest, and returns true if the name of a file listed in the bundle manifest ends with `.results`.\n",
+    "\n",
+    "* The **range** check returns true if the bundle's `manifest.version` has a value greater than or equal to 7/12/2018. (It is important to note that the DSS uses timestamps for version numbers, which makes it possible to implement the date restriction.)\n",
     "\n",
     "In short, __this query will find bundles that contain a `.results` file and are newer than July 12, 2018.__"
    ]
@@ -92,14 +98,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we execute the search using [`post_search`](#):"
+    "Next, we execute the search with `post_search()`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'client' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m--------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                    Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-ea6327163154>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Use output_format='raw' to inculde metadata with search results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbundles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpost_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mes_query\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreplica\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'aws'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_format\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'raw'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'client' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Use output_format='raw' to inculde metadata with search results\n",
     "bundles = client.post_search(es_query=query, replica='aws', output_format='raw')"
