--- a/explore-hca-dataset-scanpy-may-2019/explore-hca-dataset-scanpy-may-2019.ipynb
+++ b/explore-hca-dataset-scanpy-may-2019/explore-hca-dataset-scanpy-may-2019.ipynb
@@ -47,7 +47,8 @@
    "metadata": {},
    "source": [
     "## Read the expression matrix file downloaded from the HCA\n",
-    "The file shown here is from the study [Single-Cell Analysis of Human Pancreas Reveals Transcriptional Signatures of Aging and Somatic Mutation Patterns by Enge, et al.](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6047899/), available in this repository at `./pancreas.loom`"
+    "\n",
+    "The file lodaed here is from the study [Single-Cell Analysis of Human Pancreas Reveals Transcriptional Signatures of Aging and Somatic Mutation Patterns by Enge, et al.](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6047899/), available in this repository:"
    ]
   },
   {
@@ -600,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.3"
   },
   "toc": {
    "base_numbering": 1,
