add examples of downloading 10x-liver data

--- a/download-10x-liver/download-10x-liver.ipynb
+++ b/download-10x-liver/download-10x-liver.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Download all bundles for liver cells sequenced with 10x"
+    "# Download Data for All Liver Cells Sequenced with 10x"
    ]
   },
   {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
      "text": [
       "Metadata files:\n",
       "cell_suspension_json\n",
-      "dissociation_protocol_json\n",
+      "collection_protocol_json\n",
       "donor_organism_json\n",
       "enrichment_protocol_json\n",
       "library_preparation_protocol_json\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,11 +109,11 @@
      "text": [
       "[\n",
       "    {\n",
-      "        \"describedBy\": \"https://schema.humancellatlas.org/type/protocol/sequencing/10.0.0/sequencing_protocol\",\n",
+      "        \"describedBy\": \"https://schema.humancellatlas.org/type/protocol/sequencing/10.0.2/sequencing_protocol\",\n",
       "        \"instrument_manufacturer_model\": {\n",
-      "            \"ontology\": \"EFO:0009173\",\n",
-      "            \"ontology_label\": \"Illumina NextSeq 500\",\n",
-      "            \"text\": \"Illumina NextSeq 500\"\n",
+      "            \"ontology\": \"EFO:0008637\",\n",
+      "            \"ontology_label\": \"Illumina NovaSeq 6000\",\n",
+      "            \"text\": \"Illumina NovaSeq 6000\"\n",
       "        },\n",
       "        \"method\": {\n",
       "            \"ontology\": \"EFO:0008441\",\n",
@@ -122,12 +122,14 @@
       "        },\n",
       "        \"paired_end\": true,\n",
       "        \"protocol_core\": {\n",
-      "            \"protocol_id\": \"sequencing_protocol_1\"\n",
+      "            \"protocol_description\": \"Libraries were sequenced on an Illumina NovaSeq 6000\",\n",
+      "            \"protocol_id\": \"sequencing_protocol_1\",\n",
+      "            \"protocol_name\": \"SmartSeq2\"\n",
       "        },\n",
       "        \"provenance\": {\n",
-      "            \"document_id\": \"293c36a8-33ce-4e21-a694-b2ae60fb1e2d\",\n",
-      "            \"submission_date\": \"2019-05-10T14:22:49.335Z\",\n",
-      "            \"update_date\": \"2019-05-10T14:22:53.538Z\"\n",
+      "            \"document_id\": \"571cc0c7-4dc2-443b-93f4-0ce4af08cf6d\",\n",
+      "            \"submission_date\": \"2019-07-09T21:04:28.843Z\",\n",
+      "            \"update_date\": \"2019-07-09T21:04:34.377Z\"\n",
       "        },\n",
       "        \"schema_type\": \"protocol\"\n",
       "    }\n",
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -161,15 +163,12 @@
      "text": [
       "[\n",
       "    {\n",
-      "        \"describedBy\": \"https://schema.humancellatlas.org/type/protocol/sequencing/6.1.0/library_preparation_protocol\",\n",
+      "        \"describedBy\": \"https://schema.humancellatlas.org/type/protocol/sequencing/6.1.1/library_preparation_protocol\",\n",
       "        \"end_bias\": \"full length\",\n",
       "        \"input_nucleic_acid_molecule\": {\n",
       "            \"ontology\": \"OBI:0000869\",\n",
+      "            \"ontology_label\": \"polyA RNA\",\n",
       "            \"text\": \"polyA RNA\"\n",
-      "        },\n",
-      "        \"library_construction_kit\": {\n",
-      "            \"manufacturer\": \"Illumina\",\n",
-      "            \"retail_name\": \"Nextera XT kit\"\n",
       "        },\n",
       "        \"library_construction_method\": {\n",
       "            \"ontology\": \"EFO:0008931\",\n",
@@ -177,14 +176,15 @@
       "            \"text\": \"Smart-seq2\"\n",
       "        },\n",
       "        \"nucleic_acid_source\": \"single cell\",\n",
-      "        \"primer\": \"poly-dT\",\n",
       "        \"protocol_core\": {\n",
-      "            \"protocol_id\": \"library_preparation_protocol_1\"\n",
+      "            \"protocol_description\": \"smart-seq2\",\n",
+      "            \"protocol_id\": \"library_preparation_1\",\n",
+      "            \"protocol_name\": \"Smart-seq2\"\n",
       "        },\n",
       "        \"provenance\": {\n",
-      "            \"document_id\": \"3ab6b486-f900-4f70-ab34-98859ac5f77a\",\n",
-      "            \"submission_date\": \"2019-05-10T14:22:49.330Z\",\n",
-      "            \"update_date\": \"2019-05-10T14:22:53.537Z\"\n",
+      "            \"document_id\": \"47d78ecd-e946-4591-9ed4-acbbdbdf82a1\",\n",
+      "            \"submission_date\": \"2019-07-09T21:04:28.837Z\",\n",
+      "            \"update_date\": \"2019-07-09T21:04:34.114Z\"\n",
       "        },\n",
       "        \"schema_type\": \"protocol\",\n",
       "        \"strand\": \"unstranded\"\n",
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -237,42 +237,30 @@
       "[\n",
       "    {\n",
       "        \"biomaterial_core\": {\n",
-      "            \"biomaterial_id\": \"DID_scRSq06_pancreas\",\n",
+      "            \"biomaterial_description\": \"Lung EPCAM\",\n",
+      "            \"biomaterial_id\": \"3_38_F_Lung_EPCAM\",\n",
+      "            \"biomaterial_name\": \"3_38_F_Lung_EPCAM\",\n",
       "            \"ncbi_taxon_id\": [\n",
-      "                9606\n",
+      "                10090\n",
       "            ]\n",
       "        },\n",
-      "        \"describedBy\": \"https://schema.humancellatlas.org/type/biomaterial/10.2.0/specimen_from_organism\",\n",
-      "        \"diseases\": [\n",
-      "            {\n",
-      "                \"ontology\": \"PATO:0000461\",\n",
-      "                \"ontology_label\": \"normal\",\n",
-      "                \"text\": \"normal\"\n",
-      "            }\n",
-      "        ],\n",
+      "        \"describedBy\": \"https://schema.humancellatlas.org/type/biomaterial/10.2.1/specimen_from_organism\",\n",
       "        \"genus_species\": [\n",
       "            {\n",
-      "                \"ontology\": \"NCBITaxon:9606\",\n",
-      "                \"ontology_label\": \"Homo sapiens\",\n",
-      "                \"text\": \"Homo sapiens\"\n",
+      "                \"ontology\": \"NCBITaxon:10090\",\n",
+      "                \"ontology_label\": \"Mus musculus\",\n",
+      "                \"text\": \"Mus musculus\"\n",
       "            }\n",
       "        ],\n",
       "        \"organ\": {\n",
-      "            \"ontology\": \"UBERON:0001264\",\n",
-      "            \"ontology_label\": \"pancreas\",\n",
-      "            \"text\": \"pancreas\"\n",
+      "            \"ontology\": \"UBERON:0002048\",\n",
+      "            \"ontology_label\": \"lung\",\n",
+      "            \"text\": \"lung epcam\"\n",
       "        },\n",
-      "        \"organ_parts\": [\n",
-      "            {\n",
-      "                \"ontology\": \"UBERON:0000006\",\n",
-      "                \"ontology_label\": \"islet of Langerhans\",\n",
-      "                \"text\": \"islet of Langerhans\"\n",
-      "            }\n",
-      "        ],\n",
       "        \"provenance\": {\n",
-      "            \"document_id\": \"67601c53-f042-4b12-ba42-a822ddc23ed9\",\n",
-      "            \"submission_date\": \"2019-05-10T14:20:26.013Z\",\n",
-      "            \"update_date\": \"2019-05-10T14:26:49.560Z\"\n",
+      "            \"document_id\": \"577a91d8-e579-41b6-9353-7e4e774c161a\",\n",
+      "            \"submission_date\": \"2019-07-09T19:41:33.874Z\",\n",
+      "            \"update_date\": \"2019-07-09T22:28:11.151Z\"\n",
       "        },\n",
       "        \"schema_type\": \"biomaterial\"\n",
       "    }\n",
@@ -312,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -359,7 +347,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "post_search() found 10 results\n",
+      "post_search() found 15 results\n",
       "post_search() returned 10 results\n"
      ]
     }
@@ -376,12 +364,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It so happens that all of these bundles belong to the same project:"
+    "We can also print information about the project this bundle is part of - it so happens that all of these bundles belong to the same project:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +395,201 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus concludes our tutorial."
+    "This concludes the ElasticSearch query portion of this tutorial, the next step is to use the results of this query to download the results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Downloading All Query Results\n",
+    "\n",
+    "Next, we iterate over the results of the query to download the data. To make that easier, we can rewrrite the `post_search()` API call to `post_search.iterate()` to iterate over all results instead of returning them one page at a time:\n",
+    "\n",
+    "```python\n",
+    "bundles = client.post_search(es_query=query, replica='aws', output_format='raw')\n",
+    "```\n",
+    "\n",
+    "now becomes\n",
+    "\n",
+    "```python\n",
+    "bundles_generator = client.post_search.iterate(es_query=query, replica='aws', output_format='raw')\n",
+    "for i, bundle in enumerate(bundles_generator):\n",
+    "    # ...\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a refresher, here is our ElasticSearch query:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"query\": {\n",
+      "        \"bool\": {\n",
+      "            \"must\": [\n",
+      "                {\n",
+      "                    \"wildcard\": {\n",
+      "                        \"files.library_preparation_protocol_json.library_construction_method.text\": {\n",
+      "                            \"value\": \"*10x*\"\n",
+      "                        }\n",
+      "                    }\n",
+      "                },\n",
+      "                {\n",
+      "                    \"match\": {\n",
+      "                        \"files.specimen_from_organism_json.organ.text\": \"liver\"\n",
+      "                    }\n",
+      "                }\n",
+      "            ]\n",
+      "        }\n",
+      "    }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(json.dumps(query, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have our query, and we have our loop structure for iterating over all results of the query. The last thing we need is a function to process each bundle returned by the query."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions to Process Results\n",
+    "\n",
+    "Below we give several functions that process the results of the query in different ways. Swap out the call to `print_bundle()` with a call to your function of choice in the loop below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_bundle(bundle):\n",
+    "    \"\"\"This function extracts the bundle FQID and prints it\"\"\"\n",
+    "    bundle_fqid = bundle['bundle_fqid']\n",
+    "    bundle_uuid, bundle_version = bundle_fqid.split(\".\", 1)\n",
+    "    print(f\"Now processing bundle UUID {bundle_uuid} Version {bundle_version}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download_bundle(bundle):\n",
+    "    \"\"\"This function downloads the exact version of the bundle\"\"\"\n",
+    "    bundle_fqid = bundle['bundle_fqid']\n",
+    "    bundle_uuid, bundle_version = bundle_fqid.split(\".\", 1)\n",
+    "    client.download(\n",
+    "        bundle_uuid=bundle_uuid,\n",
+    "        version=bundle_version,\n",
+    "        replica=\"aws\",\n",
+    "        download_dir=\"data-10x-liver\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download_latest_bundle(bundle):\n",
+    "    \"\"\"This function downloads the latest version of the bundle\"\"\"\n",
+    "    budle_fqid = bundle['bundle_fqid']\n",
+    "    bundle_uuid, _ = bundle_fqid.split(\".\", 1)\n",
+    "    \n",
+    "    # Get information about the latest version of this bundle\n",
+    "    bundle_info = dss.get_bundle(\n",
+    "        uuid=bundle_uuid,\n",
+    "        replica=\"aws\"\n",
+    "    )\n",
+    "    \n",
+    "    # Download the latest version of the bundle\n",
+    "    client.download(\n",
+    "        bundle_uuid=bundle_uuid,\n",
+    "        version=bundle_info['version'],\n",
+    "        replica=\"aws\",\n",
+    "        download_dir=\"data-10x-liver-latestversion\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download_fastq_only(bundle):\n",
+    "    \"\"\"This function downloads only the .fastq.gz files contained in a bundle\"\"\"\n",
+    "    bundle_fqid = bundle['bundle_fqid']\n",
+    "    for f in bundle['metadata']['manifest']['files']:\n",
+    "        f_name = f['name']\n",
+    "        if f_name.endswith(\".fastq.gz\"):\n",
+    "            f_uuid = f['uuid']\n",
+    "            f_version = f['version']\n",
+    "            print(f\"Downloading file {f_name} : UUID {f_uuid}\")\n",
+    "            results = client.get_file(\n",
+    "                uuid = f_uuid,\n",
+    "                version = f_version,\n",
+    "                replica = 'aws'\n",
+    "            )\n",
+    "            open(f_name, 'w').write(results.decode(\"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now processing bundle UUID fd7a46db-1e90-4bfd-8e70-a77baa01faa5 Version 2019-09-23T173114.106310Z\n",
+      "Now processing bundle UUID fd7a46db-1e90-4bfd-8e70-a77baa01faa5 Version 2019-09-20T175818.017079Z\n",
+      "Now processing bundle UUID fbda9910-5076-47a6-83d6-cfff39d17606 Version 2019-09-26T051746.268160Z\n",
+      "Now processing bundle UUID fb2ae8b7-06b0-4881-ad9f-1f37255b91b6 Version 2019-09-23T173114.107225Z\n",
+      "Now processing bundle UUID fb2ae8b7-06b0-4881-ad9f-1f37255b91b6 Version 2019-09-20T175818.015707Z\n",
+      "Now processing bundle UUID c65efd23-bbc4-459a-ac60-d3cde705193d Version 2019-09-23T173114.107641Z\n",
+      "Now processing bundle UUID c65efd23-bbc4-459a-ac60-d3cde705193d Version 2019-09-20T175818.014333Z\n",
+      "Now processing bundle UUID c59a8de8-d4f3-424b-b716-06b7152b980a Version 2019-09-23T173114.106782Z\n",
+      "Now processing bundle UUID c59a8de8-d4f3-424b-b716-06b7152b980a Version 2019-09-20T175818.012949Z\n",
+      "Now processing bundle UUID be9f2d04-77ee-4f59-a0f7-f0b58034cf8c Version 2019-09-23T173114.105576Z\n",
+      "Now processing bundle UUID be9f2d04-77ee-4f59-a0f7-f0b58034cf8c Version 2019-09-20T175818.018494Z\n",
+      "Now processing bundle UUID 82164816-64d4-4975-a248-b66c4fdad6f8 Version 2019-09-26T054644.254919Z\n",
+      "Now processing bundle UUID 56cce395-634e-4c53-976c-931727d22dfa Version 2019-09-26T074759.713933Z\n",
+      "Now processing bundle UUID 3a7af639-ac18-49a7-aef9-2eb4b1ecf598 Version 2019-09-26T072340.935554Z\n",
+      "Now processing bundle UUID 2f62f508-6503-4c2e-a714-8298f55bdaa2 Version 2019-09-26T064657.900169Z\n"
+     ]
+    }
+   ],
+   "source": [
+    "results_generator = client.post_search.iterate(es_query=query, replica='aws', output_format='raw')\n",
+    "\n",
+    "for bundle in results_generator:\n",
+    "    print_bundle(bundle)"
    ]
   }
  ],
