--- a/download-all-fastq-files/download-all-fastq-files.ipynb
+++ b/download-all-fastq-files/download-all-fastq-files.ipynb
@@ -4669,8 +4669,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_fastq(fastq):\n",
-    "    print(f\" - {fastq['name']} : Size {fastq['size']/1024/1024/1024:.2f} GB\")"
+    "DOWNLOADS_DIR = 'downloads'"
    ]
   },
   {
@@ -4679,12 +4678,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def print_fastq(fastq):\n",
+    "    print(f\" - {fastq['name']} : Size {fastq['size']/1024/1024/1024:.2f} GB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def download_fastq(fastq):\n",
     "    print(f\"Now downloading fastq file {fastq['name']} ({fastq['size']/1024/1024/1024} GB)...\")\n",
     "    fastq = client.get_file(replica='aws', uuid=fastq['uuid'], version=fastq['version'])\n",
     "    # fastq is of type 'bytes'\n",
-    "    results = client.get_file(replica='aws', uuid=results_file_uuid, version=results_file_version)\n",
-    "    open('matrix.results', 'wb').write(results)"
+    "    open(os.path.join(DOWNLOADS_DIR, fastq['name']), 'wb').write(results)"
    ]
   },
   {
@@ -4696,12 +4704,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.makedirs('downloads', exist_ok=True)"
+    "os.makedirs(DOWNLOADS_DIR, exist_ok=True)"
    ]
   },
   {
@@ -4713,7 +4721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
